.github/scripts/tests/fixtures/api-impl-006/pass/swift-array-primitives/Sources/Array Primitives/RateLimiters.swift
// A compound top-level type is not an [API-IMPL-006] violation when the file
// basename exactly matches the declared type. Any type-naming concern belongs
// to its own canonical rule.

public struct RateLimiters {
    public init() {}
}
