.github/scripts/tests/fixtures/api-impl-006/fail/swift-bad-naming/Sources/Bad Module/PasswordHasher.swift
// A compound candidate remains an [API-IMPL-006] violation when its basename
// does not match the top-level declared type.

public struct Hasher {
    public init() {}
}
